src/main/resources/scss/profile/components/_profile-cards.scss
.profile-cards {
	list-style-type: none;
	margin: 0;
}

.activity .profile-card {
	&, & > div {
		border-radius: 3px;
	}
}

//TODO: split specific cards into their own file.
.profile-card {

	$card-padding: .625rem;
	position: relative;
	background: white;
	padding: $card-padding;
	padding-left: 0.75rem;

	margin: 0.3125rem 0;
	// border-left: 0.25rem solid transparent;
	font-size: .875rem;

	&.about {
		box-shadow: inset 0.25rem 0 0 0 #fc9f77;
	}
	&.education {
		box-shadow: inset 0.25rem 0 0 0 #fdcf61;
	}
	&.positions {
		box-shadow: inset 0.25rem 0 0 0 #7ecfc8;
	}
	&.interests {
		box-shadow: inset 0.25rem 0 0 0 #c671c1;
	}

	.avatar-heading {
		position: relative;
		& > .avatar {
			$size: 60px;
			position: absolute;
			width: $size;
			height: $size;
			top: 0;
			left: 0;
		}
		.wrap {
			margin: 0 0 1rem 4.375rem;
			min-height: 2.5rem;
			h1 {
				margin-bottom: 0;
			}
			.meta {
				font-size: .8rem;
			}
		}
	}

	.chat {
		&.avatar-heading {
			$avatarsize: 60px;
			$iconsize: 32px;
			$position: ($avatarsize - $iconsize)/2; // center in the 60x60 avatar space
			@extend %profile-card-chat-icon;
			background: {
				position: $position $position;
				repeat: no-repeat;
			}
		}
		ul.meta {
			margin: 0;
			list-style-type: none;
			li {
				display: inline-block;
				margin-right: 1em;
			}
		}

		.chat-transcript {
			margin: 0 0.625rem 0 -0.3125rem;
		}

	}

	.headline.post {
		margin-top: 0;
		// padding-top: 1rem;
		.avatar {
			top: 0;
		}
	}


	& > h1 {
		font-family: $body-font-family;
		font-size: 1.25rem;
		color: $secondary-grey;
		border-bottom: 0.0625rem solid $quad-grey;
		padding: .2em 0;
	}

	h1 {
		font-family: $body-font-family;
		font-size: 1.25rem;
		color: $secondary-grey;
	}

	.breadcrumb, .heading {
		border-bottom: 1px solid $quad-grey;
		display: block;
		padding-bottom: 1em;
		margin: 0 #{-$card-padding};
		padding-left: 0;
	}

	.heading {
		margin: 0 0 1rem 0;
	}

	.note.heading,
	.highlight-group {
		position: relative;
		padding-left: 76px;
		margin-bottom: 2rem;
		.breadcrumb-list {
			margin: 0;
		}
		.breadcrumb {
			padding-bottom: 0;
			margin: 0;
		}
		img {
			position: absolute;
			top: 0;
			left: 0;
			width: 60px;
		}
	}

	.breadcrumb-list {
		margin: 0 $card-padding;
		color: $tertiary-grey;
		font-size: .6875rem;
		text-transform: uppercase;
		font-weight: 700;
		list-style-type: none;

		.crumb {
			display: inline;

			// overflow: hidden;
			// text-overflow: ellipsis;
			// white-space: nowrap;

			&::before {
				content: '/';
				padding: 0 0.3em;
			}
			&:first-child::before {
				content: none;
			}
		}
	}

	.body {
		position: relative;
		padding: 1rem 0;
	}

	.footer {
		margin-top: 1rem;
		& > * {
			display: inline-block;
			margin-right: 1rem;
		}
	}

	a.more.button {
		display: block;
		border-radius: 3px;
		margin: -$card-padding;
		margin-left: -0.75rem;
	}
}

.professional-position {
	margin-bottom: 2rem;
}

.professional-position,
.educational-experience {

	&:nth-child(1n+2) {
		margin-top: 1rem;
	}

	.company,
	.school {
		font-size: 1rem;
		font-weight: 700;
		margin: 0;
		font-family: $body-font-family;
	}
	.title {

	}
	.description {
		font-style: italic;
	}
}

